# fix_mogasens_csv

./: '  .clang-tidy  .gitignore  .gitmodules  .rubocop_todo.yml  .travis.yml  CMakeLists.txt  Doxyfile  README.md  TODO_LIST.txt  UHUH.ods  appveyor.yml  build.bat  build.sh  clean.sh  compare_counts.sh  compare_segmentation.bat  compare_segmentation.sh  confusion_matrix.bat  confusion_matrix.sh  count.bat  count.sh  create_mike_example.sh  do_it.sh  filter.bat  filter.sh  fix_compile_commands.py  fix_csvs.bat  fix_csvs.sh  format.sh  generate_documentation.sh  generate_images.bat  generate_images.sh  lint.sh  output.txt  preprocessed_segment.bat  preprocessed_segment.sh  segment.bat  segment.sh  segment_all.bat  (+6 more)
compare_segmentation/: CMakeLists.txt
compare_segmentation/include/: csv_line.hpp  data_set_info.hpp  filter_kind.hpp  log_files.hpp  log_info.hpp  log_line.hpp  mode.hpp  paths.hpp  segmentation_kind.hpp
compare_segmentation/src/: csv_line.cpp  data_set_info.cpp  f.cpp  filter_kind.cpp  log_files.cpp  log_info.cpp  log_line.cpp  main.cpp  mode.cpp  segmentation_kind.cpp
compare_segmentation/test/: CMakeLists.txt  csv_line_test.cpp  data_set_info_test.cpp  f_test.cpp  log_files_test.cpp  log_info_test.cpp  log_line_test.cpp  mode_test.cpp
confusion_matrix/: CMakeLists.txt
confusion_matrix/data/: manual_segmentation.csv
confusion_matrix/data/segmentation_points_imported_from_python/: skipWindow-false_deleteTooClose-false_deleteTooLowVariance-false_imu-gyroscope_segmentationKind-both_windowSize-3_filterKind-average.txt  skipWindow-false_deleteTooClose-false_deleteTooLowVariance-false_imu-gyroscope_segmentationKind-both_windowSize-51_filterKind-average.txt  skipWindow-false_deleteTooClose-false_deleteTooLowVariance-false_imu-gyroscope_segmentationKind-max_windowSize-301_filterKind-average.txt  skipWindow-false_deleteTooClose-false_deleteTooLowVariance-false_imu-gyroscope_segmentationKind-min_windowSize-151_filterKind-average.txt  skipWindow-false_deleteTooClose-false_deleteTooLowVariance-false_imu-gyroscope_segmentationKind-min_windowSize-301_filterKind-average.txt  skipWindow-false_deleteTooClose-false_deleteTooLowVariance-false_imu-gyroscope_segmentationKind-min_windowSize-351_filterKind-average.txt  skipWindow-false_deleteTooClose-false_deleteTooLowVariance-true_imu-gyroscope_segmentationKind-both_windowSize-101_filterKind-average.txt  skipWindow-false_deleteTooClose-false_deleteTooLowVariance-true_imu-gyroscope_segmentationKind-both_windowSize-151_filterKind-average.txt  skipWindow-false_deleteTooClose-false_deleteTooLowVariance-true_imu-gyroscope_segmentationKind-both_windowSize-301_filterKind-average.txt  skipWindow-false_deleteTooClose-false_deleteTooLowVariance-true_imu-gyroscope_segmentationKind-both_windowSize-3_filterKind-average.txt  skipWindow-false_deleteTooClose-false_deleteTooLowVariance-true_imu-gyroscope_segmentationKind-both_windowSize-51_filterKind-average.txt  (+95 more)
confusion_matrix/include/: closest_one.hpp  configuration.hpp  confusion_matrix.hpp  confusion_matrix_best_configs.hpp  create_segmentation_results.hpp  csv_file_info.hpp  data_set_identifier.hpp  distance.hpp  distance_score.hpp  fetch.hpp  find_best_configuration.hpp  imu.hpp  interpolated_data_set_paths.hpp  manual_segmentation_point.hpp  order_configurations_by_quality.hpp  python_output.hpp  segment.hpp  split_string.hpp
confusion_matrix/src/: closest_one.cpp  configuration.cpp  confusion_matrix.cpp  confusion_matrix_best_configs.cpp  create_segmentation_results.cpp  csv_file_info.cpp  data_set_identifier.cpp  distance.cpp  distance_score.cpp  example.cpp  find_best_configuration.cpp  imu.cpp  interpolated_data_set_paths.cpp  main.cpp  manual_segmentation_point.cpp  order_configurations_by_quality.cpp  python_output.cpp  segment.cpp  split_string.cpp
confusion_matrix/test/: CMakeLists.txt  data_set_identifier_test.cpp  interpolated_data_set_paths_test.cpp  manual_segmentation_point_test.cpp  sample_test.cpp  segment_test.cpp  split_string_test.cpp
counting/: CMakeLists.txt
counting/include/: above_threshold.hpp  average_comparison_value_calculator.hpp  half_maximum_comparison_value_calculator.hpp  is_relevant.hpp  percentage_of.hpp  run_above_threshold.hpp
counting/src/: above_threshold.cpp  average_comparison_value_calculator.cpp  half_maximum_comparison_value_calculator.cpp  main.cpp  run_above_threshold.cpp
counting/test/: CMakeLists.txt  above_threshold_test.cpp  percentage_of_test.cpp
csv_lib/: CMakeLists.txt
csv_lib/include/: channel.hpp  column.hpp  data_point.hpp  data_set.hpp  error.hpp  exception.hpp  read_csv_file.hpp  to_string.hpp
csv_lib/include/cl/: channel.hpp  (+13 more)
csv_lib/src/: channel.cpp  data_point.cpp  data_set.cpp  error.cpp  exception.cpp  read_csv_file.cpp
csv_lib/test/: CMakeLists.txt  channel_test.cpp  column_test.cpp  data_point_test.cpp  data_set_test.cpp  directory_listing_test.cpp  error_test.cpp  exception_test.cpp  read_csv_file_test.cpp  s2n_test.cpp  sensor_test.cpp  to_string_test.cpp
feature_extraction/: CMakeLists.txt
feature_extraction/include/: channel.hpp  column.hpp  f.hpp  sensor.hpp
feature_extraction/src/: data_set.cpp  error.cpp  exception.cpp  f.cpp  main.cpp  read_csv_file.cpp  sensor.cpp
feature_extraction/test/: CMakeLists.txt  channel_test.cpp  column_test.cpp  data_set_test.cpp  error_test.cpp  exception_test.cpp  f_test.cpp  read_csv_file_test.cpp  to_string_test.cpp
fix_csv/: CMakeLists.txt
fix_csv/include/: adjust_hardware_timestamp.hpp  columns.hpp  convert_to_unix_line_endings.hpp  create_backup_file.hpp  delete_non_bosch_sensors.hpp  delete_out_of_bounds_values.hpp  remove_zeros_from_field.hpp  restore_from_backup.hpp  write_file.hpp
fix_csv/src/: adjust_hardware_timestamp.cpp  convert_to_unix_line_endings.cpp  create_backup_file.cpp  delete_non_bosch_sensors.cpp  delete_out_of_bounds_values.cpp  main.cpp  remove_zeros_from_field.cpp  restore_from_backup.cpp  write_file.cpp
fix_csv/test/: CMakeLists.txt  adjust_hardware_timestamp_test.cpp  columns_test.cpp  remove_zeros_from_field_test.cpp
(+142 files in other folders)
